package pa1.containment;

public class Isolation extends Containment {

    public Isolation(int pos) {
        this.name = "isolation";
        this.pos = pos;
    }
}
