package pa1.containment;


public class Vaccination extends Containment {

    public Vaccination(int pos) {
        this.name = "vaccine";
        this.pos = pos;
    }
}
